# Zephyr

apps/ReadID_ad74416h/: CMakeLists.txt  prj.conf
apps/ReadID_ad74416h/src/: main.c
apps/ReadID_ad74416h_Rev1/: CMakeLists.txt  prj.conf
apps/ReadID_ad74416h_Rev1/boards/: max32670evkit.overlay
apps/ReadID_ad74416h_Rev1/src/: main.c
apps/Test_ad74416h/: CMakeLists.txt  prj.conf
apps/Test_ad74416h/boards/: max32670evkit.overlay
apps/Test_ad74416h/src/: main.c
modules/ad74416h/drivers/: CMakeLists.txt  Kconfig
modules/ad74416h/drivers/ad74416h/: CMakeLists.txt  Kconfig  ad74416h.c  ad74416h.h
modules/ad74416h/dts/bindings/: adi,ad74416h.yaml
modules/ad74416h/zephyr/: module.yaml
